menambah fitur mutasi dan pengajuan pinjaman

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,24 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/active"
-    android:backgroundTint="@color/white"
+
     tools:context=".Activty.HistoryActivity">
 
     <Spinner
         android:id="@+id/spinner_year"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="90dp"
+        android:backgroundTint="@color/black"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.391" />
+        app:layout_constraintVertical_bias="0.186" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="20dp"
+        android:id="@+id/rvMutasi"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="338dp"
+        app:layout_constraintTop_toBottomOf="@+id/namaSampah"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/adminTugas"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:gravity="center"
+        android:text="Admin:"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rvMutasi"
+        app:layout_goneMarginTop="10dp" />
+
+    <TextView
+        android:id="@+id/notFound"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="288dp"
+        android:gravity="center"
+        android:text="Total: Rp.30,000"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/total"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:gravity="center"
+        android:text="Total:"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toEndOf="@+id/adminTugas"
+        app:layout_constraintTop_toBottomOf="@id/rvMutasi"
+        app:layout_goneMarginTop="10dp" />
+
+    <Button
+        android:id="@+id/btnCekMutasi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_year"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Cek Mutasi"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:id="@+id/namaSampah"
+        android:layout_marginStart="5dp"
+        android:text="Nama Sampah"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/btnCekMutasi"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:id="@+id/totalSampah"
+        android:layout_marginStart="40dp"
+        android:text="Bobot"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/btnCekMutasi"
+        app:layout_constraintStart_toEndOf="@+id/namaSampah"/>
+    <TextView
+        android:id="@+id/biayaSampah"
+        android:layout_marginStart="40dp"
+        android:text="Biaya"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/btnCekMutasi"
+        app:layout_constraintStart_toEndOf="@+id/totalSampah"/>
 
 
-</RelativeLayout>
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
