--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/white"
     android:padding="20dp"
-    tools:context=".Activty.VerifyActivity">
+    tools:context=".Activty.PengajuanActivity">
 
     <ImageView
         android:onClick="backbutton"
