--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -126,7 +126,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/verify"
+                        android:id="@+id/history"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginStart="20dp"
@@ -158,7 +158,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/history"
+                        android:id="@+id/pengajuan"
                         android:layout_width="37dp"
                         android:layout_height="32dp"
                         android:layout_marginStart="20dp"
