menambah fitur daftar harga dinamis

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/active"
 
-    tools:context=".Activty.HistoryActivity">
+    tools:context=".activty.HistoryActivity">
 
     <Spinner
         android:id="@+id/spinner_year"
