--- a/app/src/main/res/layout/static_rv_item.xml
+++ b/app/src/main/res/layout/static_rv_item.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Besi"
-        android:fontFamily="@font/poppins_semibold"
+        android:fontFamily="@font/poppins_light"
         android:textColor="@color/buttontext"
         android:layout_gravity="center"
         android:textSize="14sp" />
