--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,16 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/active"
-
+    android:background="@color/white"
     tools:context=".activty.HistoryActivity">
 
     <Spinner
+        tools:listitem=""
         android:id="@+id/spinner_year"
         android:layout_width="200dp"
-        android:layout_height="90dp"
-        android:backgroundTint="@color/black"
+        android:layout_height="35dp"
+        android:popupBackground="@drawable/shapeoutline"
         android:textAlignment="center"
+        android:background="@drawable/shapeoutline"
+        android:popupTheme="@color/buttontext"
+        android:spinnerMode="dialog"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -23,16 +26,12 @@
         app:layout_constraintVertical_bias="0.186" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="20dp"
         android:id="@+id/rvMutasi"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="338dp"
-        app:layout_constraintTop_toBottomOf="@+id/namaSampah"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
@@ -86,45 +85,64 @@
 
     <Button
         android:id="@+id/btnCekMutasi"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/spinner_year"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="Cek Mutasi"
-        android:textColor="@color/black"/>
+        android:textColor="@color/white"/>
 
-    <TextView
-        android:id="@+id/namaSampah"
-        android:layout_marginStart="5dp"
-        android:text="Nama Sampah"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/btnCekMutasi"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <TextView
-        android:id="@+id/totalSampah"
-        android:layout_marginStart="40dp"
-        android:text="Bobot"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/btnCekMutasi"
-        app:layout_constraintStart_toEndOf="@+id/namaSampah"/>
-    <TextView
-        android:id="@+id/biayaSampah"
-        android:layout_marginStart="40dp"
-        android:text="Biaya"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/btnCekMutasi"
-        app:layout_constraintStart_toEndOf="@+id/totalSampah"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnCekMutasi">
 
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/poppins_light"
+            android:gravity="center"
+            android:text="Nama Sampah"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></TextView>
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/poppins_light"
+            android:gravity="center"
+            android:text="Bobot"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/poppins_light"
+            android:gravity="center"
+            android:text="Harga Sampah"
+            android:textColor="@color/black"
+            android:layout_marginEnd="20dp"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"></TextView>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
