--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -90,10 +90,10 @@
 
         <EditText
             android:id="@+id/nama"
-            android:inputType="numberDecimal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_light"
+            android:inputType="numberDecimal"
             android:textColor="@color/buttontext"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">
 
@@ -106,7 +106,7 @@
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Verifikasi"
+        android:text="AJUKAN"
         android:fontFamily="@font/poppins_light"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
