--- a/app/src/main/res/layout/item_mutasi.xml
+++ b/app/src/main/res/layout/item_mutasi.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:id="@+id/namaSampah"
+                android:id="@+id/tanggal"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
@@ -32,7 +32,7 @@
                 app:layout_constraintTop_toTopOf="parent"></TextView>
 
             <TextView
-                android:id="@+id/totalSampah"
+                android:id="@+id/admin"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/poppins_light"
@@ -45,7 +45,7 @@
                 app:layout_constraintTop_toTopOf="parent"></TextView>
 
             <TextView
-                android:id="@+id/biayaSampah"
+                android:id="@+id/total"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="20dp"
