--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,25 +28,25 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="40dp"
         android:hint="Username"
-        android:textColorHint="@color/buttontext"
-        app:boxCornerRadiusBottomEnd="30dp"
-        app:boxCornerRadiusBottomStart="30dp"
-        app:boxCornerRadiusTopEnd="30dp"
-        app:boxCornerRadiusTopStart="30dp"
-        app:boxStrokeColor="@color/buttontext"
+        android:textColorHint="@color/Green"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:boxStrokeColor="@color/Green"
         app:endIconDrawable="@drawable/outline_lock_24"
         app:endIconMode="clear_text"
-        app:endIconTint="@color/buttontext"
-        app:hintTextColor="@color/buttontext"
+        app:endIconTint="@color/Green"
+        app:hintTextColor="@color/Green"
         app:startIconDrawable="@drawable/outline_perm_identity_24"
-        app:startIconTint="@color/buttontext">
+        app:startIconTint="@color/Green">
 
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_light"
-            android:textColor="@color/buttontext"
+            android:textColor="@color/Green"
             tools:ignore="SpeakableTextPresentCheck">
 
         </EditText>
@@ -63,15 +63,15 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:hint="Password"
-        android:textColorHint="@color/buttontext"
-        app:boxCornerRadiusBottomEnd="30dp"
-        app:boxCornerRadiusBottomStart="30dp"
-        app:boxCornerRadiusTopEnd="30dp"
-        app:boxCornerRadiusTopStart="30dp"
-        app:boxStrokeColor="@color/buttontext"
-        app:hintTextColor="@color/buttontext"
+        android:textColorHint="@color/Green"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:boxStrokeColor="@color/Green"
+        app:hintTextColor="@color/Green"
         app:startIconDrawable="@drawable/outline_lock_24"
-        app:startIconTint="@color/buttontext">
+        app:startIconTint="@color/Green">
 
         <EditText
             android:autofillHints="password"
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_light"
             android:inputType="textPassword"
-            android:textColor="@color/buttontext"
+            android:textColor="@color/Green"
             tools:ignore="SpeakableTextPresentCheck">
 
         </EditText>
@@ -96,7 +96,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="50dp"
         android:text="@string/forgot"
-        android:textColor="@color/buttontext"
+        android:textColor="@color/Green"
         android:textSize="15sp" />
 
     <Button
@@ -108,9 +108,9 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/shapebutton"
+        android:onClick="login"
         android:text="LOGIN"
-        android:textColor="@color/white"
-        android:onClick="login"/>
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/register"
@@ -123,18 +123,18 @@
         android:minHeight="48dp"
         android:onClick="login"
         android:text="Doesn't has any account ? Register Here"
-        android:textColor="#00838F" />
+        android:textColor="@color/Green" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/register"
         android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppins_light"
         android:text="@string/loginpage"
-        android:layout_marginTop="20dp"
         android:textAlignment="center"
-        android:textColor="@color/buttontext"
+        android:textColor="@color/Green"
         android:textSize="10sp" />
 
     <ProgressBar
@@ -142,11 +142,12 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="345dp"
         android:foregroundGravity="center"
-        android:visibility="gone"
-        tools:visibility="visible"
 
-        />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 
 </RelativeLayout>
