--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -9,62 +9,7 @@
     android:padding="20dp"
     tools:context=".activty.PengajuanActivity">
 
-    <ImageView
-        android:onClick="backbutton"
-        android:id="@+id/backbutton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/backbutton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:fontFamily="@font/poppins_light"
-        android:text="Saldo Penarikan"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/backbutton"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="300.0000"
-        android:textColor="@color/buttontext"
-        android:textSize="35sp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/rp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Rp."
-        android:textColor="@color/buttontext"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.68"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Maksimal Penarikan"
-        android:textColor="@color/buttontext"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/penarikanUang"
@@ -72,21 +17,21 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:hint="Masukkan Jumlah Uang"
-        android:layout_marginTop="30dp"
-        android:textColorHint="@color/buttontext"
-        app:boxCornerRadiusBottomEnd="20dp"
-        app:boxCornerRadiusBottomStart="20dp"
-        app:boxCornerRadiusTopEnd="20dp"
-        app:boxCornerRadiusTopStart="20dp"
-        app:boxStrokeColor="@color/buttontext"
+        android:textColorHint="@color/Green"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:boxStrokeColor="@color/Green"
         app:endIconMode="clear_text"
-        app:endIconTint="@color/buttontext"
-        app:hintTextColor="@color/buttontext"
+        app:endIconTint="@color/Green"
+        app:hintTextColor="@color/Green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:startIconDrawable="@drawable/ic_badge_black_24dp"
-        app:startIconTint="@color/buttontext">
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
+        app:startIconTint="@color/Green">
 
         <EditText
             android:id="@+id/nama"
@@ -94,7 +39,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_light"
             android:inputType="numberDecimal"
-            android:textColor="@color/buttontext"
+            android:textColor="@color/Green"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">
 
         </EditText>
@@ -106,11 +51,21 @@
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AJUKAN"
+        android:text="@string/ajukan"
         android:fontFamily="@font/poppins_light"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/penarikanUang"></Button>
+        app:layout_constraintTop_toBottomOf="@+id/penarikanUang" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvMutasi"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/verifikasi"
+        tools:listitem="@layout/item_mutasi" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
