--- a/app/src/main/res/layout/detail_item_sampah.xml
+++ b/app/src/main/res/layout/detail_item_sampah.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:layout_marginTop="10dp"
-    android:layout_margin="10dp"
     android:background="@drawable/rectangle2">
 
     <TextView
@@ -13,8 +12,9 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:text="@string/gayung"
+        android:letterSpacing="0.1"
+        android:fontFamily="@font/poppins"
         android:textColor="@color/black"
-        android:textStyle="bold"
         android:layout_marginTop="12dp"
         android:layout_marginStart="15dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,9 +24,10 @@
         android:id="@+id/jumlahPengaju"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="15dp"
         android:fontFamily="@font/poppins_bold"
         android:text="@string/nominal"
+        android:letterSpacing="0.1"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -39,7 +40,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="6dp"
         android:text="@string/bobots"
         android:textSize="12sp"
         android:fontFamily="@font/poppins_light"
