--- a/app/src/main/res/layout/item_mutasi.xml
+++ b/app/src/main/res/layout/item_mutasi.xml
@@ -2,9 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:layout_marginTop="10dp"
-    android:layout_margin="10dp"
+    android:layout_height="80dp"
+    android:layout_marginBottom="18dp"
     android:background="@drawable/rectangle2">
 
 
@@ -12,43 +11,50 @@
         android:id="@+id/etHarga"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:fontFamily="@font/poppins_bold"
         android:text="@string/nominal"
+        android:layout_marginStart="20dp"
         android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvtanggal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/admin" />
 
     <TextView
         android:id="@+id/admin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="20dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="@string/nominal"
+        android:text="@string/phaksi_bangun_asmoro"
         android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:letterSpacing="0.1"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvtanggal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:fontFamily="@font/poppins"
         android:text="@string/tanggal"
         android:textColor="@color/black"
-        android:layout_marginStart="20dp"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/admin"
+        app:layout_constraintTop_toBottomOf="@+id/admin" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:src="@drawable/detailbutton"
+        app:layout_constraintBottom_toBottomOf="@+id/etHarga"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/etHarga" />
 
 
 
